hphp/hack/test/typecheck/reactive/owned_mutable12.php.exp
File "owned_mutable12.php", line 12, characters 19-19:
Member f has the wrong type (Typing[4341])
File "owned_mutable12.php", line 5, characters 37-38:
Incompatible mutabilities:
File "owned_mutable12.php", line 5, characters 37-38:
This parameter is mutable
File "owned_mutable12.php", line 12, characters 42-43:
This parameter is owned mutable
